--- a/cards.css
+++ b/cards.css
@@ -52,7 +52,7 @@ div.cards {
   /* height: fixed; */
   text-align: center;
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: repeat(1, 1fr);
   align-items: center;
   /* display: flex;
   align-items: center;
@@ -216,9 +216,14 @@ div.card.show div.flap2 {
   transition: all 0.3s 0.2s ease-out;
 }
 
+@media (min-width: 985px) and (max-width: 1401px){
+  div.cards{
+   grid-template-columns: repeat(2, 1fr);
+  } 
+ }
 
-@media only screen and (max-width: 1400px){
+@media (min-width: 1400px){
  div.cards{
-  grid-template-columns: auto auto;
+  grid-template-columns: repeat(3, 1fr);
  } 
 }
