--- a/dynamicText.css
+++ b/dynamicText.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
+  @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Rajdhani&display=swap');
 
 /* * {
 	margin: 0;
@@ -16,20 +18,21 @@ body {
 } */
 
 .title {
-	font-family: "Poppins", sans-serif;
 	position: relative;
 }
 
 .title h2 {
 	color: #fff;
-	font-size: 11rem;
+	font-size: 10rem;
 	position: absolute;
 	transform: translate(-50%, -50%);
+	font-family: "Poppins", sans-serif;
+	/* font-family: 'Rajdhani', sans-serif; */
 }
 
 .title h2:nth-child(1) {
 	color: transparent;
-	-webkit-text-stroke: 2px #03a9f4;
+	-webkit-text-stroke: 4px #03a9f4;
 }
 
 .title h2:nth-child(2) {
