--- a/bubble.css
+++ b/bubble.css
@@ -13,6 +13,7 @@ body {
     height: 100vh;
     width: 100%;
     z-index: 2;
+    display: none;
 }
 
 /* OBJECTS */
@@ -245,3 +246,9 @@ body {
     }
 }
 
+
+@media (min-width: 985px){
+    #background-wrap{
+     display: block;
+    }
+   }
