--- a/cards.css
+++ b/cards.css
@@ -159,7 +159,7 @@ div.card div.card-title h2 small {
 div.card div.card-description {
   padding: 0 15px 10px;
   position: relative;
-  font-size: 14px;
+  font-size: 1.3rem;
 }
 
 div.card div.card-actions {
