--- a/index.css
+++ b/index.css
@@ -220,38 +220,44 @@ hr{
     text-align: center;
 }
 
-/* #sponsors{
+#sponsors{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    background-color: rgb(255, 107, 107);
-    transform: skewY(-2deg);
-    margin: 100px 0px;
-    /* background-color: aqua;
+    width: 90%;
+    background-color: white;
+    border-radius: 6rem;
+    margin: 50px auto;
+    padding: 60px 0px;
+    /* background-color: rgb(255, 107, 107); */
+    /* transform: skewY(-2deg); */
+
+    /* background-color: aqua;*/
 }
 
-#sponsors .title-sponsor{
-    margin-top: 50px;
-    margin-bottom: 100px;
-    transform: skewY(2deg);
+#sponsors .title-sponsor, .energy-sponsors,.collaboration, .associate-sponsors{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 30px;
+    /* transform: skewY(2deg); */
 }
 
 #sponsors .title-sponsor img{
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
+    width: 250px;
+    height: 250px;
+    /* border-radius: 50%; */
     margin-bottom: 30px;
     background-color: black;
 }
 
 #sponsors img{
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin-bottom: 30px;
-    background-color: black;
+    width: 18rem;
+    height: 10rem;
+    margin: 1rem;
+    border-radius: 1.5rem;
     margin: 20px;
 }
 
@@ -261,11 +267,10 @@ hr{
     justify-content: center;
     flex-wrap: wrap;
     width: 100%;
-    margin-bottom: 150px;
-    transform: skewY(2deg);
+    /* transform: skewY(2deg); */
 }
 
-#sponsors .other-sponsors .energy-sponsors{
+/* #sponsors .other-sponsors .energy-sponsors{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -281,22 +286,22 @@ hr{
     justify-content: center;
     flex-direction: column;
     margin: 0px 120px;
-}
+} */
 
 #sponsors .other-sponsors .associate-sponsors ul{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-} */
+}
 
-#sponsors{
+/* #sponsors{
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
+} */
 
 #sponsors h1{
     margin-top: 50px;
