--- a/index.css
+++ b/index.css
@@ -371,11 +371,11 @@ hr{
     margin-bottom: 50px;
 }
 
-#sponsors ul li{
-    /* background-color: whitesmoke;
+/* #sponsors ul li{
+    background-color: whitesmoke;
     margin: 30px;
-    border-radius: 40px; */
-}
+    border-radius: 40px;
+} */
 
 #sponsors ul li img{
     width: 15rem;
